// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionsContainer snapshot test 1 1`] = `
<Box>
  <QuestionsHeader
    locale="en"
    questionsList={Array []}
    questionsLoading={false}
    translations={Object {}}
  />
  <QuestionsContent
    locale="en"
    questionsList={Array []}
    questionsLoading={false}
    translations={Object {}}
  />
  <NoQuestions />
</Box>
`;

exports[`QuestionsContainer snapshot test 2 1`] = `
<Box>
  <QuestionsHeader
    locale="en"
    questionsList={
      Array [
        Array [
          "cheburek",
          "cheburek",
        ],
      ]
    }
    questionsLoading={false}
    translations={Object {}}
  />
  <QuestionsContent
    locale="en"
    questionsList={
      Array [
        Array [
          "cheburek",
          "cheburek",
        ],
      ]
    }
    questionsLoading={false}
    translations={Object {}}
  />
</Box>
`;

exports[`QuestionsContainer snapshot test 3 1`] = `
<Box>
  <QuestionsHeader
    locale="en"
    questionsList={
      Array [
        Array [
          "cheburek",
          "cheburek",
        ],
      ]
    }
    questionsLoading={true}
    translations={Object {}}
  />
  <QuestionsContent
    locale="en"
    questionsList={
      Array [
        Array [
          "cheburek",
          "cheburek",
        ],
      ]
    }
    questionsLoading={true}
    translations={Object {}}
  />
  <LoadingIndicator />
</Box>
`;
